--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,6 +4,7 @@
     ],
     "java.project.referencedLibraries": [
         "lib/**/*.jar",
-        "c:\\Users\\xingj\\Downloads\\algs4.jar"
+        "c:\\Users\\xingj\\Downloads\\algs4.jar",
+        "/mnt/c/Users/xingj/Downloads/algs4.jar"
     ]
 }
