--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,8 @@
 {
     "java.project.sourcePaths": [
+        "Queues",
         "Percolation",
-        "Queues"
+        "MergeSort"
     ],
     "java.project.referencedLibraries": [
         "lib/**/*.jar",
